# DAA_project

./: .dockerignore  .gitignore  ADMIN_DASHBOARD_DOCS.md  ADMIN_QUICK_REFERENCE.md  ADMIN_UPDATES_DOCS.md  AUTHENTICATION_DOCS.md  CMakeLists.txt  COMPARISON_MODE_DOCS.md  DOCKER_BUILD_ANALYSIS.md  DOCKER_BUILD_FIXES.md  Dockerfile  MAP_STYLES_REFERENCE.md  MULTI_SEGMENT_TIMELINE_FEATURE.md  Models.h  README.md  ROUNDTRIP_FEATURE_DOCS.md  bellman_ford.cpp  cpp_server_setup_docs.md  docker-compose.yml  jsondb.cpp  jsondb.h  main.cpp  project_presentation.md  smart_routes_algorithm_docs.md  smart_routes_code_explanation.md
frontend/: admin-airports.html  admin-analytics.html  admin-bookings.html  admin-flights.html  admin-users.html  admin.html  flight-details.html  home.html  index.html  login.html  profile.html  ticket.html
frontend/css/: admin-style.css
frontend/js/: admin-core.js
